cmake_minimum_required(VERSION 2.8)
project( BokehCamera )
find_package(OpenCV REQUIRED)
find_package(realsense2 REQUIRED)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( BokehCamera BokehCamera.cpp )
target_link_libraries( BokehCamera ${OpenCV_LIBS} ${realsense2_LIBRARY})
